# vpcm

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  coverage.yml  doi-check.yml
apps/: __init__.py
apps/api/: README.md  __init__.py  main.py
apps/dashboard/: README.md
apps/reports/: README.md
configs/: default.yaml  phase1_smoke.yaml  vpcm_v1.yaml
configs/baselines/: mandatory.yaml
configs/biomarker/: phase5.yaml
configs/causal/: support_manifold.yaml
configs/conformal/: fda_grade.yaml
configs/data/: phase1.yaml
configs/lora/: patient_specific.yaml
configs/mechanism/: phase5.yaml
configs/models/: foundation_ensemble.yaml
configs/outcome/: phase6.yaml
configs/perturbation/: ensemble.yaml
configs/pipeline/: vpcm_v1.yaml
configs/regulatory/: phase7.yaml
configs/reproducibility/: deterministic.yaml
data/baselines/: csendes_repro.json
docker/: Dockerfile.dev  docker-compose.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  COU.md  DATA_DICTIONARY.md  FDA_7STEP.md  RESEARCH_REPORT.md  VV40_DOSSIER.md
docs/regulatory/: EMA_AI_MEDICINES.md  FDA_EMA_GOOD_AI_PRACTICE_2026.md  HEALTH_CANADA_MLMD.md  MHRA_SAIMD.md  NMPA_AI_MEDICAL_DEVICES.md
notebooks/: 02_baseline_reproduction.ipynb
scripts/: verify_dois.py
