[project]
name = "vpcm-workspace"
version = "0.1.0"
description = "Virtual Patient Cell Model monorepo workspace"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "VPCM Contributors" }]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.6",
  "cryptography>=42",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pyright>=1.1.390",
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["A", "B", "C4", "E", "F", "I", "N", "RUF", "UP", "W"]
ignore = ["UP006", "UP007", "UP045"]

[tool.pyright]
include = [
  "packages/vpcm_core/src",
  "packages/vpcm_data/src",
  "packages/vpcm_models/src",
  "packages/vpcm_baselines/src",
  "packages/vpcm_perturbation/src",
  "packages/vpcm_causal/src",
  "packages/vpcm_core/tests",
  "packages/vpcm_data/tests",
  "packages/vpcm_models/tests",
  "packages/vpcm_baselines/tests",
  "packages/vpcm_perturbation/tests",
  "packages/vpcm_causal/tests",
  "scripts",
]
pythonVersion = "3.9"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
extraPaths = [
  "packages/vpcm_core/src",
  "packages/vpcm_data/src",
  "packages/vpcm_models/src",
  "packages/vpcm_baselines/src",
  "packages/vpcm_perturbation/src",
  "packages/vpcm_causal/src",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = [
  "packages/vpcm_core/tests",
  "packages/vpcm_data/tests",
  "packages/vpcm_models/tests",
  "packages/vpcm_baselines/tests",
  "packages/vpcm_perturbation/tests",
  "packages/vpcm_causal/tests",
]
pythonpath = [
  "packages/vpcm_core/src",
  "packages/vpcm_data/src",
  "packages/vpcm_models/src",
  "packages/vpcm_baselines/src",
  "packages/vpcm_perturbation/src",
  "packages/vpcm_causal/src",
]

[tool.coverage.run]
branch = true
source = [
  "vpcm_core",
  "vpcm_data",
  "vpcm_models",
  "vpcm_baselines",
  "vpcm_perturbation",
  "vpcm_causal",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
